# CMakeList.txt : CMake project for dearimgraph, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("dearimgraph")

# Add source to this project's executable.
add_executable (dearimgraph "dearimgraph.cpp" "dearimgraph.h")

# TODO: Add tests and install targets if needed.
